feat: Issue Ballot for voting (#86)
* feat: A Poll can issue a Ballot

* feat: Provide infrastructure for persisting Ballots

* feat: Expose an Application Service to issue voting ballots

* test: Simplify test dummy for Poll Repository

* test: Simplify test for Show Poll Controller

* feat: Add voting form to include Ballot information

* style: Marking args as final is not relevant here

* style: Formatting

* feat: Ballot requires a client identifier

* feat: Prevent issuing two ballots to the same client

* fix: Throw error when no unique result

* feat: Pass client identification when creating Ballot

* test: Simplify test a little bit

* feat: Separate locations for db-specific migrations

* feat: Assign each poll option a unique value

* fix: Rename test method

* fix: Move to correct package

* test: Simplify preparation for test

* test: Add option values for integration tests

* style: Ensure utility class cannot be instantiated

* style: JUnit classes don't need to be public

* test: Verify unhappy cases for JPA-implementation of Ballot Repository

* test: Verify determining migration locations in Schema Updater

* fix: Simplify code

Error handling needs to happen when committing the transaction
(the error doesn't surface any earlier)

* chore(test): Additional --add-opens statements

* test: Verify invocation of Flyway

* test: Look in correct part of Vote page

* test: Verify constructing Flyway configuration

* fix: Save one entity query when checking for existing ballots